Fix 'Links to cross-origin destinations are unsafe', 'Tap targets are sized appropriately', 'Background and foreground colors have a sufficient contrast ratio'

--- a/starter/assets/scss/abstracts/_variables.scss
+++ b/starter/assets/scss/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $font-weights: (
 
 $custom-colors: (
     primary: (
-        base: dodgerblue
+        base: #0071df
     ),
     secondary: (
         base: coral
